objects/Truck_load__c.object
<CustomObject>
    <label>Truck load</label>
    <nameField>
        <label>Truck load by which Person</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Truck loads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>cement</fullName>
                </value>
                <value>
                    <fullName>house hold goods</fullName>
                </value>
                <value>
                    <fullName>industrial equipments</fullName>
                </value>
                <value>
                    <fullName>metals</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Time__c</fullName>
        <label>Schedule Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Truck_booking__c</fullName>
        <label>Truck booking</label>
        <referenceTo>Truck_booking__c</referenceTo>
        <relationshipLabel>Truck loads</relationshipLabel>
        <relationshipName>Truck_loads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Material_Weight__c</fullName>
        <label>Material Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Check_material_weight</fullName>
        <active>true</active>
        <errorConditionFormula>Truck_booking__r.Truck__r.truck_take_Approximate_load__c &lt;  Material_Weight__c</errorConditionFormula>
        <errorMessage>Please reduce material</errorMessage>
    </validationRules>
</CustomObject>